--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,7 +7,7 @@
 
 }
 
-body {
+html, body {
   font-size: 15px;
   font-family: 'Poppins', sans-serif;
   background-image: linear-gradient(black, #404040);
@@ -28,6 +28,7 @@ nav a {
   text-decoration: none;
   font-size: 1em;
   text-align: center;
+  transition: background-color 0.7s;
   color: inherit;
 }
 
@@ -40,30 +41,42 @@ nav li {
   padding: 1em;
 }
 
-nav li:hover {
-  background-color: white;
+.active, nav li:hover {
+  background-color: #fff;
   color: black;
 }
 
 
-
 /* Section */
 section {
+  display: flex;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 40em;
-  display: flex;
   justify-content: center;
   text-align: center;
+  min-height: 70%;
 }
+
+.search {
+  background-color: #62bf5a;
+  padding: 1em;
+}
+
 
 /* Hero image / Welcome screen */
 #welcome {
   background-image: url(https://www.sharewise.com/rails/active_storage/blobs/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBeG1wVnc9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--abfb11b385abaca273820f741853a9becd118707/girl-listening-to-music.jpg?locale=us);
 }
 
+#go-back {
+  background-image: url(https://miro.medium.com/max/1200/1*npJ3g9zUbxOg1lwt8uECCw.jpeg);
+  /* background-image: url(http://www.twisteddrinks.com/images/pic01.jpg); */
+}
 
+#about {
+  background-image: url(https://pbs.twimg.com/media/Dw_0zPdVsAA6GsK?format=jpg&name=large);
+}
 
 /* Buttons */
 .btn {
@@ -124,19 +137,19 @@ section {
 
 
 /* DIV Containers */
-.welcome-container {
+.welcome-container, .go-back-container, .about-container {
 margin-top: 15em;
 text-align: center;
 color: white;
 }
 
-.welcome-container h1 {
+.welcome-container h1, .go-back-container h1, .about-container h1 {
   font-size: 4em;
   text-transform: uppercase;
   text-shadow: 6px 5px 4px black;
 }
 
-.welcome-container h2 {
+.welcome-container h2, .about-container h2 {
   background-color: #39995a;
   color: white;
   font-weight: 500;
@@ -147,23 +160,16 @@ color: white;
   letter-spacing: -0.01em;
 }
 
-.info-container {
+
+.info-container, .qstatistics-container, .interact-container {
   background-color: white;
   margin-bottom: 3em;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 2em;
   width: 80em;
   padding-bottom: 1em;
   /*max-width: 70em;*/
-}
-
-.qstatistics-container {
-  background-color: white;
-  margin-bottom: 3em;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80em;
-  padding-bottom: 1em;
 }
 
 .cta-container {
@@ -175,6 +181,7 @@ color: white;
   height: 5em;
   padding-bottom: 1em;
 }
+
 
 
 /* Headings and Paragraph Styles */
